# 2D-function-evaluator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  tmp_convergence_history.csv  tmp_generation_history.csv  tmp_generations_history.csv  tmp_history.csv
cmake/: Dependencies.cmake
docs/: visualization.md
scripts/: animate_generations.py  animate_generations_3d.py  animate_generations_dashboard.py  animate_trajectory.py  extract_history.py  functions_2d.py  output_paths.py  plot_benchmark_functions.py  plot_convergence.py  plot_diversity.py  plot_generation.py  plot_trajectory.py  viz.bat  viz.ps1  viz.py
scripts/__pycache__/: animate_generations.cpython-314.pyc.1942515214080  extract_history.cpython-314.pyc.1943282513840  functions_2d.cpython-314.pyc.2748092219056  plot_convergence.cpython-314.pyc.2748092179936  plot_diversity.cpython-314.pyc.1694216725040  plot_generation.cpython-314.pyc.1973023253296
src/: functions.cpp  functions.hpp  io.cpp  io.hpp  main.cpp
tests/: CMakeLists.txt  test_basic.cpp
